// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GotenList snapshots with all titles and actions 1`] = `
<div>
  <link
    crossOrigin="anonymous"
    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
    rel="stylesheet"
  />
  <table
    className="table table-striped table-condensed table-hover"
  >
    <thead>
      <tr>
        <th>
          Title
        </th>
        <th>
          <label
            className="actions"
          >
            actionsTitle
          </label>
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`GotenList snapshots with onEdit 1`] = `
<div>
  <link
    crossOrigin="anonymous"
    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
    rel="stylesheet"
  />
  <table
    className="table table-striped table-condensed table-hover"
  >
    <thead>
      <tr>
        <th />
        <th>
          <label
            className="actions"
          />
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`GotenList snapshots with onEdit, onRemove and onSearch 1`] = `
<div>
  <link
    crossOrigin="anonymous"
    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
    rel="stylesheet"
  />
  <table
    className="table table-striped table-condensed table-hover"
  >
    <thead>
      <tr>
        <th />
        <th>
          <label
            className="actions"
          />
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`GotenList snapshots with onRemove 1`] = `
<div>
  <link
    crossOrigin="anonymous"
    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
    rel="stylesheet"
  />
  <table
    className="table table-striped table-condensed table-hover"
  >
    <thead>
      <tr>
        <th />
        <th>
          <label
            className="actions"
          />
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`GotenList snapshots with onSearch 1`] = `
<div>
  <link
    crossOrigin="anonymous"
    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
    rel="stylesheet"
  />
  <table
    className="table table-striped table-condensed table-hover"
  >
    <thead>
      <tr>
        <th />
        <th>
          <label
            className="actions"
          />
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`GotenList snapshots with title and action 1`] = `
<div>
  <link
    crossOrigin="anonymous"
    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
    rel="stylesheet"
  />
  <table
    className="table table-striped table-condensed table-hover"
  >
    <thead>
      <tr>
        <th>
          Title
        </th>
        <th>
          <label
            className="actions"
          >
            Actions
          </label>
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`GotenList snapshots without actions title 1`] = `
<div>
  <link
    crossOrigin="anonymous"
    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
    rel="stylesheet"
  />
  <table
    className="table table-striped table-condensed table-hover"
  >
    <thead>
      <tr>
        <th>
          Title
        </th>
        <th>
          <label
            className="actions"
          />
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`GotenList snapshots without title 1`] = `
<div>
  <link
    crossOrigin="anonymous"
    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
    rel="stylesheet"
  />
  <table
    className="table table-striped table-condensed table-hover"
  >
    <thead>
      <tr>
        <th />
        <th>
          <label
            className="actions"
          >
            Actions
          </label>
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`GotenList snapshots without title and actions title 1`] = `
<div>
  <link
    crossOrigin="anonymous"
    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
    rel="stylesheet"
  />
  <table
    className="table table-striped table-condensed table-hover"
  >
    <thead>
      <tr>
        <th />
        <th>
          <label
            className="actions"
          />
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;
